Fix gap between notification pop-up header and notifications

--- a/modules/styles/mw.echo.ui.NotificationBadgeWidget.less
+++ b/modules/styles/mw.echo.ui.NotificationBadgeWidget.less
@@ -24,7 +24,7 @@
 
 				> .oo-ui-labelElement-label {
 					font-size: 1.2em;
-					padding: 0.3em;
+					padding: 0.25em;
 					margin-left: 0;
 					font-weight: bold;
 				}
